--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.1
+  flutter_screenutil: ^5.6.0
+  dio: ^4.0.6
+  connectivity_plus: ^3.0.2
+  shared_preferences: ^2.0.7
+  device_info_plus: ^8.0.0
+  dotted_line: ^3.1.0
+  cached_network_image: ^3.2.0
+  http: ^0.13.3
+  fluttertoast: ^8.1.1
+  pull_to_refresh: ^2.0.0
+  event_bus: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.2
+
+
 
 dev_dependencies:
   flutter_test:
